deploy/k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: platform
  labels:
    app.kubernetes.io/name: vmp-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vmp-api
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
